--- a/static/css/index.css
+++ b/static/css/index.css
@@ -133,5 +133,14 @@ body {
   font-size: smaller;
 }
 
+.img-responsive {
+  width: 100%;
+  height: auto;
+}
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
